--- a/ffmpeg-Scripts/FarMenu.ini
+++ b/ffmpeg-Scripts/FarMenu.ini
@@ -15,7 +15,7 @@
      %FFMPEG-PATH%FarCommandMJPEG.bat !&
 :    Loop Video to ItSelf
      SET FFMPEG-PATH=D:\Distr\Video\ffmpeg\bin\
-     powershell.exe %FFMPEG-PATH%loopvideo.ps1 -ffmpeg_path %FFMPEG-PATH% -filenames '!&' -fadedur !?$<qual>$<Длительность перехода>?5!
+     powershell.exe %FFMPEG-PATH%LoopVideoToItself.ps1 -ffmpeg_path %FFMPEG-PATH% -filename '!&' -fadedur !?$<qual>$<Длительность перехода>?5!
 :    To MP4 deinterlaced
      SET FFMPEG-Q=!?$<qual>$<Качество(параметр q)>?25!
      SET FFMPEG-PATH=D:\Distr\Video\ffmpeg\bin\
